--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "url": "https://github.com/kwielicki/boilerplate.git"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
     "gulp-minify": "0.0.14",
