--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolierplate",
+  "name": "Baltex - strona oficjalna",
   "version": "1.0.0",
   "main": "index.html",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kwielicki/boilerplate.git"
+    "url": "https://github.com/kwielicki/baltex.git"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
